--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hxb.learning</groupId>
-    <artifactId>design-pattern</artifactId>
+    <artifactId>distribute-learning</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>factory-method</module>
-        <module>abstract-factory</module>
-        <module>singleton</module>
-    </modules>
 
+    <modules>
+        <module>design-patterns</module>
+    </modules>
 
 </project>
