--- a/rmi/pom.xml
+++ b/rmi/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>design-patterns</artifactId>
+    <artifactId>rmi</artifactId>
 
 
 </project>
