--- a/distribute-lock/pom.xml
+++ b/distribute-lock/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rmi</artifactId>
+    <artifactId>distribute-lock</artifactId>
+
 
     <dependencies>
         <dependency>
@@ -33,8 +34,8 @@
             <artifactId>curator-recipes</artifactId>
             <version>4.0.0</version>
         </dependency>
-
     </dependencies>
+
 
 
 </project>
