--- a/design-patterns/pom.xml
+++ b/design-patterns/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>design-patterns</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.7</version>
+        </dependency>
+    </dependencies>
 
 </project>
