--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,32 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.22.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+    </dependencies>
+
     <modules>
         <module>design-patterns</module>
         <module>rmi</module>
         <module>zookeeper</module>
         <module>distribute-lock</module>
+        <module>concurrency</module>
+        <module>io</module>
+        <module>jvm</module>
     </modules>
 
     <build>
